# gtk-pip-shell

./: README.md  meson.build
examples/: meson.build  simple-example.c
include/: gtk-pip-shell.h  meson.build
protocol/: meson.build
src/: api.c  custom-shell-surface.c  gtk-priv-access.c  gtk-priv-access.h  gtk-wayland.c  gtk-wayland.h  meson.build  pip-surface.c  pip-surface.h  simple-conversions.c  simple-conversions.h  xdg-popup-surface.c  xdg-toplevel-surface.c
